23 February 2026: Wouter
	- Fix to have cachedb not return expired bogus data as non-bogus.
	- Fix to make the cachedb_val_expired.crpl succeed.

17 February 2026: Wouter
	- Fix to remove unused conditional from cookie timestamp at
	  worker env.
	- For #1405: local-zone always_refuse also blocks queries of type DS.

16 February 2026: Yorgos
	- Fix #1404: Priming the root key fails after loading ipfire.org RPZ
	  zones. Fixed by including the ZONEMD RRtype in the list of types to
	  ignore for RPZ zones. Analysis and patch provided by ummeegge.

16 February 2026: Wouter
	- Fix that cachedb aggressive negative responses have the RA flag set.

11 February 2026: Wouter
	- Fix #1403: Inconsistency between do-nat64 and do-not-query-address
	  during retries.

9 February 2026: Wouter
	- Merge #1401: Add a new build-time option for system TLS.
	  The --enable-system-tls flag enables the
	  tls-use-system-policy-versions setting by default.
	- Update generated man pages.

6 February 2026: Yorgos
	- Fix #1389: [FR] replacement with ECC-GOST12 according to RFC9558.
	  Patch contributed by Igor V. Ruzanov, available in
	  contrib/gost12.patch.

4 February 2026: Wouter
	- Fix local privilege escalation on Windows. Thanks to Hao Huang and
	  CrisprXiang with Fudan University for the report. The OpenSSL
	  init calls are set to not load the openssl.cnf file when compiled
	  for Windows.

3 February 2026: Yorgos
	- Eagerly remove .skip mark files in between mini_tdir.sh runs in case
	  there has been a change on the environment.

27 January 2026: Wouter
	- Add test for allow-notify with a host name.

26 January 2026: Wouter
	- Fix that allow-notify entries with hostnames are copied after IPv4
	  and IPv6 lookup.
	- Fix to not skip allow-notify hostname lookups when there are only
	  urls.

23 January 2026: Yorgos
	- Merge #1396: Log Linux thread ID.
	- On Linux systems log the system-wide unique thread ID instead of
	  Unbound's internal thread counter.